<resources>
    <string name="app_name">Calculate</string>
    <string name="clear">AC</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="div">/</string>
    <string name="mul">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="send_result">Send Result</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="product_category">Product Category</string>
    <string name="origin_country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="finish_all_activity">Finish All Activity</string>
    <string name="current_policies">Current Policies</string>
    <string name="country_of_origin_btn">Country of Origin</string>
    <string name="product_category_btn">Product Category</string>
    <string name="brand_btn">Brand</string>
</resources>