<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_dark"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_menu"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_menu" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/icon_red_dragon" />

                <Button
                    android:id="@+id/btm_search"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_search" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:background="@color/white_dark"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout_editor_absoluteX="-16dp">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/policies"
                android:textColor="@color/blue_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_policy"
                style="@style/Button.NotWorking"
                android:layout_marginHorizontal="@dimen/second_margin_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/policy"
                app:layout_constraintTop_toBottomOf="@+id/text_view"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_product"
                style="@style/Button.NotWorking"
                android:layout_marginHorizontal="@dimen/second_margin_horizontal"
                android:text="@string/product_category"
                app:layout_constraintTop_toBottomOf="@+id/btn_policy"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/origin"
                style="@style/Button.NotWorking"
                android:layout_marginHorizontal="@dimen/second_margin_horizontal"
                android:text="@string/origin_country"
                app:layout_constraintTop_toBottomOf="@+id/btn_product"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/brand"
                style="@style/Button.NotWorking"
                android:layout_marginHorizontal="@dimen/second_margin_horizontal"
                android:text="@string/brand"
                app:layout_constraintTop_toBottomOf="@+id/origin"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/current_policies"
                android:textColor="@color/blue_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/destroy_btn"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/red"
                android:onClick="destroyAllActivity"
                android:text="@string/finish_all_activity"
                android:textAllCaps="false"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@+id/btns">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="#0000"
                    android:drawableEnd="@drawable/ic_down"
                    android:text="@string/country_of_origin_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#0000"
                    android:drawableEnd="@drawable/ic_down"
                    android:text="@string/product_category_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="#0000"
                    android:drawableEnd="@drawable/ic_down"
                    android:text="@string/brand_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>